--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,6 +1,8 @@
 name: Django application
 
-on: [push]
+on:
+  push:
+    branches: ['main', 'developdevelopment', 'sourcery/main']
       
 jobs:
   build:
@@ -9,7 +11,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:13
+        image: postgres:11
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -31,7 +33,7 @@ jobs:
         pip install -r requirements.txt
     - uses: harmon758/postgresql-action@v1
       with:
-        postgresql version: '13'
+        postgresql version: '11'
 
     - name: Run migrations
       run: python manage.py migrate
