--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,7 +2,7 @@ name: Django application
 
 on:
   push:
-    branches: ['main', 'developdevelopment', 'sourcery/main']
+    branches: ['main', 'development', 'sourcery/main']
       
 jobs:
   build:
