--- a/.github/workflows/ci_project.yml
+++ b/.github/workflows/ci_project.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Coverage report
       run: |
         pip install coverage
-        coverage run manage.py tests
+        coverage run manage.py test
 
     - name: Django
       run: |
