Add CI on project

--- a/.github/workflows/ci_project.yml
+++ b/.github/workflows/ci_project.yml
@@ -23,14 +23,11 @@ jobs:
     - name: Run migrations
       run: python3 manage.py migrate
 
-    - name: Run tests
-      run: python3 manage.py test
-
     - name: Coverage report
       run: |
         pip install coverage
         coverage run manage.py test
 
-    - name: Django
+    - name: Django tests 
       run: |
         python3 manage.py test
