Add on CI - coverage report

--- a/.github/workflows/ci_project.yml
+++ b/.github/workflows/ci_project.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         pip install coverage
         coverage run manage.py test
+        coverage report 
 
     - name: Django tests 
       run: |
